[package]
name = "mockinx"
version = "0.1.0"
edition = "2024"
description = "Programmable HTTP test server with streaming fault injection"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_yml = "0.0.12"
rand = "0.8"
yttp = { path = "../yttp" }
