[package]
name = "mockinx"
version = "0.1.0"
edition = "2024"
description = "Mock server with codeless config of pacing, drops, throttling, and chaos"
keywords = ["mock", "http", "testing", "chaos", "throttle"]
categories = ["development-tools::testing", "web-programming::http-server"]

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_yml = "0.0.12"
rand = "0.8"
bytes = "1"
indexmap = { version = "2", features = ["serde"] }
tokio-stream = "0.1"
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
yttp = { path = "../yttp" }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
